[package]
name = "learn-bitcoin-rs-lib"
version = "0.1.0"
authors = ["Marty Jones <murtin.jones@gmail.com>"]
edition = "2018"

[lib]
name = "bitcoin"
path = "lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
unstable = []
rand = ["secp256k1/rand-std"]
use-serde = ["serde", "bitcoin_hashes/serde", "secp256k1/serde"]

[dependencies]
bech32 = "0.7.2"
bitcoin_hashes = "0.7.3"
secp256k1 = "0.17.1"
learn-bitcoin-rs-macros = { path = "../macros" }
# TODO shouldnt need this line, should be covered by cargo toml in macros:
syn = "0.14.4"

bitcoinconsensus = { version = "0.19.0-1", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
hex = "=0.3.2"
serde_derive = "<1.0.99"
serde_json = "<1.0.45"
serde_test = "1"
secp256k1 = { version = "0.17.1", features = ["rand-std"] }
